src/objects/Commission_Question__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <defaultValue>&quot; &quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BooleanValue__c</fullName>
        <formula>IF( AND (ISPICKVAL( Input_Type__c ,&apos;YESORNO&apos;), ( Input_Value__c == &apos;true&apos; )) , true , false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BooleanValue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Input_Type__c</fullName>
        <label>Input Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>currency</fullName>
                </value>
                <value>
                    <fullName>decimal</fullName>
                </value>
                <value>
                    <fullName>YES_OR_NO</fullName>
                    <label>YES OR NO</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Input_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Input Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Code__c</fullName>
        <label>Parent Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Question</label>
        <referenceTo>Commission_Question__c</referenceTo>
        <relationshipLabel>Commission Questions</relationshipLabel>
        <relationshipName>Parent_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Commission__c</fullName>
        <label>Product Commission</label>
        <referenceTo>Product_Commission__c</referenceTo>
        <relationshipLabel>Commission Questions</relationshipLabel>
        <relationshipName>Commission_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>isBoolean__c</fullName>
        <formula>OR(ISPICKVAL( output_Type__c , &apos;YESORNO&apos;),ISPICKVAL( output_Type__c , &apos;YES_OR_NOT&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isBoolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCurrency__c</fullName>
        <formula>ISPICKVAL( Input_Type__c , &apos;AMOUNT&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isCurrency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isParent__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isParent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>output_Type__c</fullName>
        <label>Output Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QUANTITY</fullName>
                </value>
                <value>
                    <fullName>YES_OR_NOT</fullName>
                </value>
                <value>
                    <fullName>AMOUNT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Commission Question</label>
    <nameField>
        <displayFormat>CQ-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>